--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
-					<h1>Oi, eu sou a <strong>Mariana Savaris Bueno</strong>,<br />
+					<h1>Oi, eu sou a <strong>Mariana Savaris Bueno</strong><br />
 					</h1>
-					<p>Estou cursando o terceiro ano do médio e busco uma vaga para Jovem Aprendiz</p>
+					<p>Estou cursando o terceiro ano do médio e busco uma vaga para Jovem Aprendiz, seja bem vindo à minha página</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Saber mais
 						</a></li>
