--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-cloud"></span>
-					<h1>Oi, eu sou a <strong>Mariana Savaris Bueno</strong><br />
+					<h1>Olá, eu sou a <strong>Mariana Savaris Bueno</strong><br />
 					</h1>
 					<p>Estou cursando o terceiro ano do médio e busco uma vaga para Jovem Aprendiz, seja bem vindo à minha página</p>
 					<ul class="actions special">
@@ -68,13 +68,15 @@
 								<h2>Cursos</h2>
 							</header>
 							<p><b>IDIOMAS</b></p>
-							<p>inglês - Microcamp.</p>
+							<p>inglês - Microcamp</p>
 							<p><b>INFORMAÇÕES COMPLEMENTARES</b></p>
-							<p>Digitação  - Microcamp - 2017.</p>
-							<p>TCPE – Treinamento de capacitação profissional estudantil - Cedaspy - 2018.</p>
-							<p>Rotinas Administrativas – Cebrac – 2018.</p>
-							<p>Departamento pessoal - Microcamp – 2018.</p>
-							<p>competências técnicas e comportamentais – Uniderp – 2019.</p>
+							<p>Digitação  - Microcamp</p>
+							<p>Atendimento ao cliente  - SEBRAE</p>
+							<p>TCPE – Treinamento de capacitação profissional estudantil - Cedaspy.</p>
+							<p>Rotinas Administrativas – Cebrac</p>
+							<p>Departamento pessoal - Microcamp</p>
+							<p>Gestão Empresarial (5 módulos: gestão administrativa, gestão de pessoas com liderança, comunicação empresarial e marketing, empreendorismo, jogos e simulação de empresas - Speed Treinamentos</p>
+							<p>Competências técnicas e comportamentais – Uniderp</p>
 						</div>
 					</div>
 				</div>
