--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 					<span class="icon solid major fa-cloud"></span>
 					<h1>Olá, eu sou a <strong>Mariana Savaris Bueno</strong><br />
 					</h1>
-					<p>Estou cursando o terceiro ano do médio e busco uma vaga para Jovem Aprendiz, seja bem vindo à minha página</p>
+					<p>Estou cursando o terceiro ano do ensino médio e busco uma oportunidade de emprego, seja bem vindo à minha página!</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Saber mais
 						</a></li>
