--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 							<header class="major">
 								<h2>Objetivo</h2>
 							</header>
-							<p>Colaborar como Jovem Aprendiz e colocar em prática meus conhecimentos para contribuir com o desenvolvimento e crescimento da empresa.</p>
+							<p>Colocar em prática meus conhecimentos para contribuir com o desenvolvimento e crescimento da empresa.</p>
 							<header class="major">
 								<h2>Habilidades e Conhecimentos</h2>
 							</header>
