--- a/index.html
+++ b/index.html
@@ -417,10 +417,10 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 		<!-- Footer -->
 			<section id="footer">
 				<ul class="icons">
-					<li><a href="https://twitter.com/msavariss" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://www.instagram.com/msavarisss/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="marisb2004@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
+				<p>(67)9106-7142 <br>marisb2004@gmail.com</p>
 				<ul class="copyright">
 					<li>&copy; Feito por: <a href="https://www.mfsm.ga/">Matheus</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 				</ul>
