--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 							<p>Boa comunicação, liderança, objetividade, criatividade, capacidade de transmitir idéias, organização e capacidade de escutar.</p>
 						</div>
 						<div class="col-6 col-12-medium imp-medium">
-							<span class="image fit"><img src="images/pic01.jpg" alt="" /></span>
+							<span class="image fit"><img src="images/pic01.jpeg" alt="" /></span>
 						</div>
 					</div>
 				</div>
