--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 			<section id="footer">
 				<ul class="icons">
 					<li><a href="https://www.instagram.com/msavarisss/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-					<li><a href="marisb2004@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="mailto:marisb2004@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<p>(67)9106-7142 <br>marisb2004@gmail.com</p>
 				<ul class="copyright">
