--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <!DOCTYPE HTML>
-<!--
-	Photon by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
-		<title>Mariana</title>
+		<title>Mariana Savaris</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +12,9 @@
 		<!-- Header -->
 			<section id="header">
 				<div class="inner">
-					<span class="icon solid major fa-cloud"></span>
+					<div class="cora">
+					<span class="icon solid major fa-heart"></span>
+				    </div>
 					<h1>Olá, eu sou a <strong>Mariana Savaris Bueno</strong><br />
 					</h1>
 					<p>Estou cursando o terceiro ano do ensino médio e busco uma oportunidade de emprego, seja bem vindo à minha página!</p>
@@ -419,10 +416,11 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<ul class="icons">
 					<li><a href="https://www.instagram.com/msavarisss/" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
 					<li><a href="mailto:marisb2004@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
+					<li><a href="https://wa.me/556791067142" class="icon brands alt fa-whatsapp"><span class="label">WhatsApp</span></a></li>
 				</ul>
-				<p>(67)9106-7142 <br>marisb2004@gmail.com</p>
+				<p class="contatos">(67)9106-7142 <br>marisb2004@gmail.com</p>
 				<ul class="copyright">
-					<li>&copy; Feito por: <a href="https://www.mfsm.ga/">Matheus</a></li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+					<li>&copy; Feito por: <a href="https://www.mfsm.ga/">Matheus Felipe</a> | Todos os direitos reservados.</li>
 				</ul>
 			</section>
 
