--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				</ul>
 				<p class="contatos">(67)9106-7142 <br>marisb2004@gmail.com</p>
 				<ul class="copyright">
-					<li>&copy; Feito por: <a href="https://www.mfsm.ga/">Matheus Felipe</a> | Todos os direitos reservados.</li>
+					<li>&copy; Feito por: <a href="https://www.mfsm.tk/">Matheus Felipe</a> | Todos os direitos reservados.</li>
 				</ul>
 			</section>
 
