--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title>Mariana Savaris</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<meta content="Estou cursando o terceiro ano do ensino médio e busco uma oportunidade de emprego, seja bem vindo à minha página!" name="description">
+		<meta content="Estou cursando psicologia e busco uma oportunidade de emprego, seja bem vindo à minha página!" name="description">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -22,7 +22,7 @@
 				    </div>
 					<h1>Olá, eu sou a <strong>Mariana Savaris Bueno</strong><br />
 					</h1>
-					<p>Estou cursando o terceiro ano do ensino médio e busco uma oportunidade de emprego, seja bem vindo à minha página!</p>
+					<p>Estou cursando o psicologia e busco uma oportunidade de emprego, seja bem vindo à minha página!</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Saber mais
 						</a></li>
@@ -93,6 +93,10 @@
 					<b><p>Jovem Aprendiz - Auxiliar Administrativo, CCR MSVia</p></b>
 					<p>14/05/2019 - 14/05/2020</p>
 					<p>Exercia o cargo de Jovem Aprendiz administrativo na instituição FATEC SENAI - CAMPO GRANDE,MS pela empresa CCR MSVia.</p>
+					
+					<b><p>Quem Disse Berenice - Consultora de Vendas</p></b>
+					<p>15/02/2022 - atual</p>
+					<p>Exercia o cargo de vendedora e caixa</p>
 				</div>
 			</section>
 
