--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				    </div>
 					<h1>Olá, eu sou a <strong>Mariana Savaris Bueno</strong><br />
 					</h1>
-					<p>Estou cursando o psicologia e busco uma oportunidade de emprego, seja bem vindo à minha página!</p>
+					<p>Estou cursando psicologia e busco uma oportunidade de emprego, seja bem vindo à minha página!</p>
 					<ul class="actions special">
 						<li><a href="#one" class="button scrolly">Saber mais
 						</a></li>
